--- a/pharma-supply-chain/env.example
+++ b/pharma-supply-chain/env.example
@@ -4,6 +4,19 @@ PRIVATE_KEY=your_private_key_here
 # PolygonScan API key for contract verification
 POLYGONSCAN_API_KEY=your_polygonscan_api_key_here
 
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/pharma-supply-chain
+# Or use MongoDB Atlas:
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/pharma-supply-chain
+
+# Backend API Configuration
+PORT=5000
+BACKEND_API_URL=http://localhost:5000/api
+
+# Smart Contract Configuration
+CONTRACT_ADDRESS=0x0000000000000000000000000000000000000000
+AMOY_RPC_URL=https://rpc-amoy.polygon.technology
+
 # IPFS configuration (optional)
 IPFS_GATEWAY_URL=https://ipfs.io/ipfs/
 PINATA_API_KEY=your_pinata_api_key
