--- a/pharma-supply-chain/package.json
+++ b/pharma-supply-chain/package.json
@@ -12,8 +12,11 @@
   "type": "commonjs",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.3",
-    "hardhat": "^2.26.1"
+    "hardhat": "^2.26.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0"
